// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert danger should be dismissable 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-red-50 text-red-500 hover:bg-red-100 focus:ring-offset-red-50 focus:ring-red-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Dismiss
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert danger should display an icon 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
              fill-rule="evenodd"
            />
          </svg>
        </p>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert danger should render the correct output when spacing is lg 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-6 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert danger should render the correct output when spacing is md 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-4 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert danger should render the correct output when spacing is none 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert danger should render the correct output when spacing is sm 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-2 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert danger should set custom dismiss text 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-red-50 text-red-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-red-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-red-50 text-red-500 hover:bg-red-100 focus:ring-offset-red-50 focus:ring-red-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Close me!
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert dismiss should automatically dismiss an alert 1`] = `<DocumentFragment />`;

exports[`Alert dismiss should dismiss an alert 1`] = `<DocumentFragment />`;

exports[`Alert primary should be dismissable 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-blue-50 text-blue-500 hover:bg-blue-100 focus:ring-offset-blue-50 focus:ring-blue-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Dismiss
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert primary should display an icon 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
              fill-rule="evenodd"
            />
          </svg>
        </p>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert primary should render the correct output when spacing is lg 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-6 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert primary should render the correct output when spacing is md 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-4 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert primary should render the correct output when spacing is none 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert primary should render the correct output when spacing is sm 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-2 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert primary should set custom dismiss text 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-blue-50 text-blue-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-blue-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-blue-50 text-blue-500 hover:bg-blue-100 focus:ring-offset-blue-50 focus:ring-blue-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Close me!
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should be dismissable 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-gray-50 text-gray-500 hover:bg-gray-100 focus:ring-offset-gray-50 focus:ring-gray-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Dismiss
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should display an icon 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
              fill-rule="evenodd"
            />
          </svg>
        </p>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should render the correct output when spacing is lg 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-6 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should render the correct output when spacing is md 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-4 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should render the correct output when spacing is none 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should render the correct output when spacing is sm 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-2 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert secondary should set custom dismiss text 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-gray-50 text-gray-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-gray-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-gray-50 text-gray-500 hover:bg-gray-100 focus:ring-offset-gray-50 focus:ring-gray-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Close me!
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should be dismissable 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-green-50 text-green-500 hover:bg-green-100 focus:ring-offset-green-50 focus:ring-green-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Dismiss
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should display an icon 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
              fill-rule="evenodd"
            />
          </svg>
        </p>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should render the correct output when spacing is lg 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-6 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should render the correct output when spacing is md 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-4 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should render the correct output when spacing is none 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should render the correct output when spacing is sm 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-2 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert success should set custom dismiss text 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-green-50 text-green-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-green-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-green-50 text-green-500 hover:bg-green-100 focus:ring-offset-green-50 focus:ring-green-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Close me!
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should be dismissable 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-yellow-50 text-yellow-500 hover:bg-yellow-100 focus:ring-offset-yellow-50 focus:ring-yellow-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Dismiss
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should display an icon 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
              fill-rule="evenodd"
            />
          </svg>
        </p>
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should render the correct output when spacing is lg 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-6 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should render the correct output when spacing is md 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-4 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should render the correct output when spacing is none 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should render the correct output when spacing is sm 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-2 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert warning should set custom dismiss text 1`] = `
<DocumentFragment>
  <div
    class="p-4 mb-0 bg-yellow-50 text-yellow-800"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <p
          class="h-5 w-5 text-yellow-400"
        />
      </div>
      <div
        class="ml-3"
      >
        <p
          class="text-sm font-medium"
        >
          Hello, world
        </p>
      </div>
      <div
        class="ml-auto pl-3"
      >
        <div
          class="-mx-1.5 -my-1.5"
        >
          <button
            class="inline-flex p-1.5 focus:outline-none focus:ring-2 focus:ring-offset-2 bg-yellow-50 text-yellow-500 hover:bg-yellow-100 focus:ring-offset-yellow-50 focus:ring-yellow-600"
            type="button"
          >
            <span
              class="sr-only"
            >
              Close me!
            </span>
            <svg
              aria-hidden="true"
              class="h-5 w-5"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.47 5.47a.75.75 0 011.06 0L12 10.94l5.47-5.47a.75.75 0 111.06 1.06L13.06 12l5.47 5.47a.75.75 0 11-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 01-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
